Added SuikaWiki URL scheme list

--- a/README
+++ b/README
@@ -8,7 +8,8 @@ specifications.
 
 In the data/ directory:
 
-  langtags.json  Language subtags
+  langtags.json     Language subtags
+  url-schemes.json  URL schemes
 
 * Author
 
