--- a/README
+++ b/README
@@ -11,6 +11,8 @@ In the data/ directory:
   langtags.json     Language subtags
   url-schemes.json  URL schemes
 
+See the doc/ directory for data files' data structure.
+
 * Author
 
 Wakaba <wakaba@suikawiki.org>.
