List of HTTP status codes

--- a/README
+++ b/README
@@ -8,8 +8,9 @@ specifications.
 
 In the data/ directory:
 
-  langtags.json     Language subtags
-  url-schemes.json  URL schemes
+  http-status-codes.json  HTTP status codes
+  langtags.json           Language subtags
+  url-schemes.json        URL schemes
 
 See the doc/ directory for data files' data structure.
 
