Added HTTP method list

--- a/README
+++ b/README
@@ -8,6 +8,7 @@ specifications.
 
 In the data/ directory:
 
+  http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   langtags.json           Language subtags
   url-schemes.json        URL schemes
