Added IANA MIME type registry

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ In the data/ directory:
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   langtags.json           Language subtags
+  mime-types.json         MIME types
   url-schemes.json        URL schemes
 
 See the doc/ directory for data files' data structure.
