Added DOM interface data; most of them came from <https://github.com/manakai/perl-web-dom>

--- a/README
+++ b/README
@@ -8,6 +8,9 @@ specifications.
 
 In the data/ directory:
 
+  css.json                CSS
+  dom.json                DOM
+  elements.json           HTML/XML elements
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   langtags.json           Language subtags
