Added encoding data

--- a/README
+++ b/README
@@ -6,11 +6,12 @@ specifications.
 
 * Data files
 
-In the data/ directory:
+In the "data/" directory:
 
   css.json                CSS
   dom.json                DOM
   elements.json           HTML/XML elements
+  encodings.json          Character encodings
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   langtags.json           Language subtags
@@ -28,5 +29,6 @@ These files are maintained as part of the manakai project
 
 * License
 
-These files can be used, distributed, or modified freely.  See each
-file for details.
+You are granted a license to use, reproduce and create derivative
+works of these files.  See also documents under the "doc/" directory,
+which might contain additional information.
