--- a/README
+++ b/README
@@ -18,7 +18,7 @@ In the "data/" directory:
   mime-types.json         MIME types
   url-schemes.json        URL schemes
 
-See the doc/ directory for data files' data structure.
+See the "doc/" directory for data files' data structure.
 
 * Author
 
