--- a/README
+++ b/README
@@ -12,10 +12,12 @@ In the "data/" directory:
   dom.json                DOM
   elements.json           HTML/XML elements
   encodings.json          Character encodings
+  encoding-indexes.json   Indexes for character encodings
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   langtags.json           Language subtags
   mime-types.json         MIME types
+  specs.json              Relevant specifications
   url-schemes.json        URL schemes
 
 See the "doc/" directory for data files' data structure.
