--- a/README
+++ b/README
@@ -15,6 +15,7 @@ In the "data/" directory:
   encoding-indexes.json   Indexes for character encodings
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
+  isindex-prompt.json     Default prompt text for <isindex>
   langtags.json           Language subtags
   mime-types.json         MIME types
   specs.json              Relevant specifications
