--- a/README
+++ b/README
@@ -17,6 +17,7 @@ In the "data/" directory:
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
   langtags.json           Language subtags
+  microdata.json          Microdata vocabularies
   mime-types.json         MIME types
   specs.json              Relevant specifications
   url-schemes.json        URL schemes
