Added ARIA data

--- a/README
+++ b/README
@@ -8,6 +8,7 @@ specifications.
 
 In the "data/" directory:
 
+  aria.json               ARIA
   css.json                CSS
   dom.json                DOM
   elements.json           HTML/XML elements
