Added notes on country and currency codes

--- a/README
+++ b/README
@@ -25,6 +25,9 @@ In the "data/" directory:
 
 See the "doc/" directory for data files' data structure.
 
+List of country codes and currency codes are also included in
+|data/langtags.json|.  See |doc/langtags.txt|.
+
 * Author
 
 Wakaba <wakaba@suikawiki.org>.
