Moved a table from wiki

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ In the "data/" directory:
   aria.json               ARIA
   css.json                CSS
   dom.json                DOM
+  dom-perl.json           DOM Perl binding
   elements.json           HTML/XML elements
   encodings.json          Character encodings
   encoding-indexes.json   Indexes for character encodings
