Added XHTML charrefs DTD

--- a/README
+++ b/README
@@ -24,6 +24,8 @@ In the "data/" directory:
   mime-types.json         MIME types
   specs.json              Relevant specifications
   url-schemes.json        URL schemes
+  xhtml-charrefs.dtd      XML character references
+  xml-syntax.json         XML syntax
 
 See the "doc/" directory for data files' data structure.
 
