--- a/README
+++ b/README
@@ -15,6 +15,7 @@ In the "data/" directory:
   elements.json           HTML/XML elements
   encodings.json          Character encodings
   encoding-indexes.json   Indexes for character encodings
+  html-charrefs.json      HTML character references
   html-syntax.json        HTML syntax
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
