Added color list

--- a/README
+++ b/README
@@ -10,6 +10,7 @@ In the "data/" directory:
 
   aria.json               ARIA
   css.json                CSS
+  css-colors.json         CSS colors
   dom.json                DOM
   dom-perl.json           DOM Perl binding
   elements.json           HTML/XML elements
