Added CSS font data

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ In the "data/" directory:
   aria.json               ARIA
   css.json                CSS
   css-colors.json         CSS colors
+  css-fonts.json          CSS fonts
   dom.json                DOM
   dom-perl.json           DOM Perl binding
   elements.json           HTML/XML elements
