Refs for XML spec data

--- a/README
+++ b/README
@@ -35,6 +35,9 @@ See the "doc/" directory for data files' data structure.
 List of country codes and currency codes are also included in
 |data/langtags.json|.  See |doc/langtags.txt|.
 
+List of XML document constraints are contained in
+<https://github.com/manakai/data-errors/blob/master/data/xml.json>.
+
 * Author
 
 Wakaba <wakaba@suikawiki.org>.
