list of task sources

--- a/README
+++ b/README
@@ -9,6 +9,7 @@ specifications.
 In the "data/" directory:
 
   aria.json               ARIA
+  browsers.json           Browser environment
   css.json                CSS
   css-colors.json         CSS colors
   css-fonts.json          CSS fonts
