--- a/README
+++ b/README
@@ -24,6 +24,7 @@ In the "data/" directory:
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
   langtags.json           Language subtags
+  js-lexical.json         JavaScript syntax
   microdata.json          Microdata vocabularies
   mime-types.json         MIME types
   specs.json              Relevant specifications
