Added some RDF data

--- a/README
+++ b/README
@@ -27,9 +27,11 @@ In the "data/" directory:
   js-lexical.json         JavaScript syntax
   microdata.json          Microdata vocabularies
   mime-types.json         MIME types
+  rdf.json                RDF
   specs.json              Relevant specifications
   url-schemes.json        URL schemes
   xhtml-charrefs.dtd      XML character references
+  xml-datatypes.json      XML / RDF datatypes
   xml-syntax.json         XML syntax
 
 See the "doc/" directory for data files' data structure.
@@ -40,15 +42,15 @@ List of country codes and currency codes are also included in
 List of XML document constraints are contained in
 <https://github.com/manakai/data-errors/blob/master/data/xml.json>.
 
-* Author
+* Contact
 
 Wakaba <wakaba@suikawiki.org>.
 
 These files are maintained as part of the manakai project
-<https://github.com/manakai/>.
+<http://manakai.github.io/>.
 
 * License
 
-You are granted a license to use, reproduce and create derivative
+You are granted a license to use, reproduce, and create derivative
 works of these files.  See also documents under the "doc/" directory,
 which might contain additional information.
