--- a/README
+++ b/README
@@ -23,10 +23,11 @@ In the "data/" directory:
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
-  langtags.json           Language subtags
   js-lexical.json         JavaScript syntax
+  langtags.json           Language subtags
   microdata.json          Microdata vocabularies
   mime-types.json         MIME types
+  ogp.json                OGP vocabulary
   rdf.json                RDF
   specs.json              Relevant specifications
   url-schemes.json        URL schemes
