Added XPath data

--- a/README
+++ b/README
@@ -34,6 +34,7 @@ In the "data/" directory:
   xhtml-charrefs.dtd      XML character references
   xml-datatypes.json      XML / RDF datatypes
   xml-syntax.json         XML syntax
+  xpath.json              XPath 1.0
 
 See the "doc/" directory for data files' data structure.
 
