Web IDL tokenization data

--- a/README
+++ b/README
@@ -31,6 +31,7 @@ In the "data/" directory:
   rdf.json                RDF
   specs.json              Relevant specifications
   url-schemes.json        URL schemes
+  webidl.json             Web IDL
   xhtml-charrefs.dtd      XML character references
   xml-datatypes.json      XML / RDF datatypes
   xml-syntax.json         XML syntax
