HTTP headers from RFC 7230

--- a/README
+++ b/README
@@ -18,6 +18,7 @@ In the "data/" directory:
   elements.json           HTML/XML elements
   encodings.json          Character encodings
   encoding-indexes.json   Indexes for character encodings
+  headers.json            HTTP headers
   html-charrefs.json      HTML character references
   html-syntax.json        HTML syntax
   http-methods.json       HTTP request methods
