Added derived tokenizer to the repo

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ In the "data/" directory:
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
   html-syntax.json        HTML syntax
+  html-tokenizer-expanded.json An HTML tokenizer description
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
@@ -45,6 +46,21 @@ List of country codes and currency codes are also included in
 
 List of XML document constraints are contained in
 <https://github.com/manakai/data-errors/blob/master/data/xml.json>.
+
+* How to use these files
+
+Use the files in the |data| directory in the |master| branch of this
+GitHub repository <https://github.com/manakai/data-web-defs/>, by
+either:
+
+  - git-cloning the repository, or
+
+  - HTTP |GET|ing files using URLs of "Raw" links in relevant
+    GitHub Web pages.
+
+These files are frequently updated.  You should setup some automated
+way to periodically update your copy of these files rather than using
+or deriving from a specific snapshot copy of these files.
 
 * Contact
 
