--- a/README
+++ b/README
@@ -22,6 +22,7 @@ In the "data/" directory:
   html-charrefs.json      HTML character references
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
+  html-tree-constructor-expanded.json An HTML tree constructor description
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
