--- a/README
+++ b/README
@@ -23,6 +23,7 @@ In the "data/" directory:
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
+  html-tree-constructor-expanded-no-isindex.json An HTML tree constructor description
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
