Added digest data

--- a/README
+++ b/README
@@ -13,6 +13,7 @@ In the "data/" directory:
   css.json                CSS
   css-colors.json         CSS colors
   css-fonts.json          CSS fonts
+  digests.json            Digest algorithms
   dom.json                DOM
   dom-perl.json           DOM Perl binding
   elements.json           HTML/XML elements
