--- a/README
+++ b/README
@@ -41,6 +41,8 @@ In the "data/" directory:
   xhtml-charrefs.dtd      XML character references
   xml-datatypes.json      XML / RDF datatypes
   xml-syntax.json         XML syntax
+  xml-tokenizer-expanded.json An XML tokenizer description
+  xml-tree-constructor-expanded.json An XML tree constructor description
   xpath.json              XPath 1.0
 
 See the "doc/" directory for data files' data structure.
