Added <meta name> data

--- a/README
+++ b/README
@@ -22,6 +22,7 @@ In the "data/" directory:
   errors.json             DOM errors
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
+  html-metadata.json      HTML metadata and link relations
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
