--- a/README
+++ b/README
@@ -37,6 +37,8 @@ In the "data/" directory:
   ogp.json                OGP vocabulary
   rdf.json                RDF
   specs.json              Relevant specifications
+  temma-syntax.json       Temma syntax
+  temma-tokenizer-expanded.json A Temma tokenizer description
   url-schemes.json        URL schemes
   webidl.json             Web IDL
   xhtml-charrefs.dtd      XML character references
@@ -74,7 +76,7 @@ or deriving from a specific snapshot copy of these files.
 Wakaba <wakaba@suikawiki.org>.
 
 These files are maintained as part of the manakai project
-<http://manakai.github.io/>.
+<https://manakai.github.io/>.
 
 * License
 
