Added HTTP/2 data

--- a/README
+++ b/README
@@ -27,6 +27,7 @@ In the "data/" directory:
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
   html-tree-constructor-expanded-no-isindex.json An HTML tree constructor description
+  http-frames.json        HTTP/2 and WebSocket
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
   isindex-prompt.json     Default prompt text for <isindex>
@@ -64,7 +65,7 @@ either:
 
   - git-cloning the repository, or
 
-  - HTTP |GET|ing files using URLs of "Raw" links in relevant
+  - HTTPS |GET|ing files using URLs of "Raw" links in relevant
     GitHub Web pages.
 
 These files are frequently updated.  You should setup some automated
