--- a/README
+++ b/README
@@ -40,6 +40,7 @@ In the "data/" directory:
   specs.json              Relevant specifications
   temma-syntax.json       Temma syntax
   temma-tokenizer-expanded.json A Temma tokenizer description
+  tls.json                TLS (SSL)
   url-schemes.json        URL schemes
   webidl.json             Web IDL
   xhtml-charrefs.dtd      XML character references
