file name to MIME type mapping

--- a/README
+++ b/README
@@ -20,6 +20,7 @@ In the "data/" directory:
   encodings.json          Character encodings
   encoding-indexes.json   Indexes for character encodings
   errors.json             DOM errors
+  file-name-extensions.json File name extensions
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
   html-metadata.json      HTML metadata and link relations
