Added attribute value case-insensitivility data for Selectors (HTML a4313d39a35d94fcf0e660a0a86241233dafd142)

--- a/README
+++ b/README
@@ -38,6 +38,7 @@ In the "data/" directory:
   mime-types.json         MIME types
   ogp.json                OGP vocabulary
   rdf.json                RDF
+  selectors.json          Selectors
   specs.json              Relevant specifications
   temma-syntax.json       Temma syntax
   temma-tokenizer-expanded.json A Temma tokenizer description
