workaround for spec update (HTML a14ca08fae3b2d2feec88544dd24b2b3db21ae16)

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 data-web-defs
 ~~~~~~~~~~~~~
 
-Collection of definitions specified or referenced in the Web platform
-specifications.
+This is a collection of definitions specified or referenced in the Web
+platform specifications.
 
 * Data files
 
