Table for DOM legacy event types

--- a/README
+++ b/README
@@ -15,6 +15,7 @@ In the "data/" directory:
   css-fonts.json          CSS fonts
   digests.json            Digest algorithms
   dom.json                DOM
+  dom-events.json         DOM events
   dom-perl.json           DOM Perl binding
   elements.json           HTML/XML elements
   encodings.json          Character encodings
