--- a/README
+++ b/README
@@ -25,6 +25,7 @@ In the "data/" directory:
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
   html-metadata.json      HTML metadata and link relations
+  html-spec-svn-history.html List of HTML Standard SVN commits in 2004-2015
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
