Updated HTML element interfaces; Updated <isindex> data

--- a/README
+++ b/README
@@ -29,11 +29,11 @@ In the "data/" directory:
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
-  html-tree-constructor-expanded-no-isindex.json An HTML tree constructor description
+  html-tree-constructor-expanded-no-isindex.json Ditto (historical)
   http-frames.json        HTTP/2 and WebSocket
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
-  isindex-prompt.json     Default prompt text for <isindex>
+  isindex-prompt.json     Default prompt text for <isindex> (historical)
   js-lexical.json         JavaScript syntax
   langtags.json           Language subtags
   microdata.json          Microdata vocabularies
