--- a/README
+++ b/README
@@ -39,12 +39,13 @@ In the "data/" directory:
   microdata.json          Microdata vocabularies
   mime-types.json         MIME types
   ogp.json                OGP vocabulary
+  psl-tests.json          Test data for public suffixes
   rdf.json                RDF
   selectors.json          Selectors
   specs.json              Relevant specifications
   temma-syntax.json       Temma syntax
   temma-tokenizer-expanded.json A Temma tokenizer description
-  tlds.json               TLDs (top-level domains)
+  tlds.json               TLDs (top-level domains) and public suffixes
   tls.json                TLS (SSL)
   url-schemes.json        URL schemes
   webidl.json             Web IDL
