Added MIME Sniffing definitions (from perl-web-resource)

--- a/README
+++ b/README
@@ -37,6 +37,7 @@ In the "data/" directory:
   js-lexical.json         JavaScript syntax
   langtags.json           Language subtags
   microdata.json          Microdata vocabularies
+  mime-sniffing.json      MIME sniffing
   mime-types.json         MIME types
   ogp.json                OGP vocabulary
   psl-tests.json          Test data for public suffixes
