Added fetch parmaeter data

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ In the "data/" directory:
   encodings.json          Character encodings
   encoding-indexes.json   Indexes for character encodings
   errors.json             DOM errors
+  fetch.json              Fetch
   file-name-extensions.json File name extensions
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
