--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-data-web-defs
-~~~~~~~~~~~~~
+<https://github.com/manakai/data-web-defs>
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 This is a collection of definitions specified or referenced in the Web
 platform specifications.
@@ -26,15 +26,12 @@ In the "data/" directory:
   headers.json            HTTP headers
   html-charrefs.json      HTML character references
   html-metadata.json      HTML metadata and link relations
-  html-spec-svn-history.html List of HTML Standard SVN commits in 2006-2015
   html-syntax.json        HTML syntax
   html-tokenizer-expanded.json An HTML tokenizer description
   html-tree-constructor-expanded.json An HTML tree constructor description
-  html-tree-constructor-expanded-no-isindex.json Ditto (historical)
   http-frames.json        HTTP/2 and WebSocket
   http-methods.json       HTTP request methods
   http-status-codes.json  HTTP status codes
-  isindex-prompt.json     Default prompt text for <isindex> (historical)
   js-lexical.json         JavaScript syntax
   langtags.json           Language subtags
   microdata.json          Microdata vocabularies
@@ -57,6 +54,12 @@ In the "data/" directory:
   xml-tokenizer-expanded.json An XML tokenizer description
   xml-tree-constructor-expanded.json An XML tree constructor description
   xpath.json              XPath 1.0
+
+Historical files:
+
+  html-spec-svn-history.html List of HTML Standard SVN commits in 2006-2015
+  html-tree-constructor-expanded-no-isindex.json An HTML tree constructor description without <isindex> support (historical)
+  isindex-prompt.json     Default prompt text for <isindex> (historical)
 
 See the "doc/" directory for data files' data structure.
 
