--- a/README
+++ b/README
@@ -46,6 +46,7 @@ In the "data/" directory:
   temma-tokenizer-expanded.json A Temma tokenizer description
   tlds.json               TLDs (top-level domains) and public suffixes
   tls.json                TLS (SSL)
+  tls-certs.pem           PKIX root CA certificates for TLS
   url-schemes.json        URL schemes
   webidl.json             Web IDL
   xhtml-charrefs.dtd      XML character references
